[package]
name = "DailyCodingProblemLuan"
version = "0.1.0"
authors = ["Luan Cestari <luan.cestari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="1076"
path = "1076-Squarespace-Misc-easy.rs"

[[bin]]
name="1077"
path = "1077-Amazon-Misc-Tree.rs"

[[bin]]
name="1079"
path = "1079-Facebook-Misc-Counter.rs"