[package]
name = "DailyCodingProblemLuan"
version = "0.1.0"
authors = ["Luan Cestari <luan.cestari@gmail.com>"]
edition = "2018"

[dependencies]

[[bin]]
name="1076"
path = "1076-Squarespace-Misc-easy.rs"

[[bin]]
name="1077"
path = "1077-Amazon-Misc-Tree.rs"

[[bin]]
name="1079"
path = "1079-Facebook-Misc-Counter.rs"

[[bin]]
name="1075"
path = "1075-Apple-Misc-Fib.rs"

[[bin]]
name="1072"
path = "1072-Facebook-Misc-Tree.rs"